--- a/gibprosj/src/App.css
+++ b/gibprosj/src/App.css
@@ -28,9 +28,14 @@
 
 /* MAP */
 
-.map-container {
+.map-wrapper {
     width: 75%;
     height: 100vh;
+}
+
+.map-container {
+    width: 100%;
+    height: 100%;
 
 }
 
