--- a/gibprosj/src/App.css
+++ b/gibprosj/src/App.css
@@ -21,7 +21,7 @@
 .input-container {
     width: 25%;
     height: 100vh;
-    background-color: aqua;
+    background-color: white;
 }
 
 /* INPUT END */
