--- a/gibprosj/src/App.css
+++ b/gibprosj/src/App.css
@@ -18,10 +18,16 @@
 
 /* INPUT */
 
-.input-container {
-    width: 25%;
+#input-container {
+    width: 250px;
     height: 100vh;
     background-color: white;
+    z-index: 1000;
+    position: absolute;
+    transform: translateX(-240px);
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+
 }
 
 /* INPUT END */
@@ -29,7 +35,7 @@
 /* MAP */
 
 .map-wrapper {
-    width: 75%;
+    width: 100%;
     height: 100vh;
 }
 
