--- a/gibprosj/src/App.css
+++ b/gibprosj/src/App.css
@@ -36,6 +36,13 @@
   -webkit-transition: 0.3s;
   transition: 0.3s;
   display: flex;
+
+}
+
+#input-main-body {
+  width: 280px;
+  height: 100%;
+  display: flex;
   flex-direction: column;
   align-items: center;
 }
@@ -65,6 +72,22 @@
   flex-direction: column;
   justify-content: space-between;
 
+}
+
+#input-visibility-button {
+  width: 20px;
+  height: 100%;
+  display: flex;
+  opacity: 0.5;
+  border-left: 1.5px solid rgb(199, 197, 197);
+  align-items: center;
+  justify-content: center;
+}
+
+#input-visibility-button:hover {
+  cursor: pointer;
+  box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
+  background-color: rgb(231, 231, 231);
 }
 
 /* INPUT END */
