--- a/gibprosj/src/App.css
+++ b/gibprosj/src/App.css
@@ -104,4 +104,15 @@
   height: 100%;
 }
 
+.custom-marker {
+  width: 30px;
+  height: 30px;
+  background-position: center;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  border-radius: 20%;
+  border: 2px solid white;
+  background-color: white;
+}
+
 /* MAP END */
