--- a/gibprosj/src/App.css
+++ b/gibprosj/src/App.css
@@ -24,6 +24,42 @@
 
 /* HEADER END */
 
+/* AddPointsButton*/
+
+#AddPointsButton {
+  position: absolute;
+  margin-top: 28%;
+  margin-left: 93%;
+}
+
+/* AddPointsButton end*/
+
+/* Add point input field */
+
+#pointinput {
+  position: absolute;
+
+  width: 225px;
+  height: 250px;
+  border-radius: 20px;
+  border: 3px solid black;
+  padding: 10px;
+  margin: 10px;
+  background-color: white;
+  top: 30px;
+  left: 77%;
+}
+
+#pointinputlabels {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 180px;
+}
+
+/* Add point input field END */
+
 /* INPUT */
 
 #input-container {
@@ -36,7 +72,6 @@
   -webkit-transition: 0.3s;
   transition: 0.3s;
   display: flex;
-
 }
 
 #input-main-body {
@@ -71,7 +106,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
 }
 
 #input-visibility-button {
