--- a/gibprosj/src/App.css
+++ b/gibprosj/src/App.css
@@ -36,6 +36,11 @@
 
 /* Add point input field */
 
+#point-input-header {
+  font-size: 20px;
+  border-bottom: 2px solid black;
+}
+
 #pointinput {
   position: absolute;
 
