--- a/gibprosj/src/App.css
+++ b/gibprosj/src/App.css
@@ -37,15 +37,14 @@
 /* Add point input field */
 
 #point-input-header {
-  font-size: 20px;
-  border-bottom: 2px solid black;
+  border: black 2px;
 }
 
 #pointinput {
   position: absolute;
 
   width: 225px;
-  height: 250px;
+  height: 350px;
   border-radius: 20px;
   border: 3px solid black;
   padding: 10px;
@@ -56,11 +55,11 @@
 }
 
 #pointinputlabels {
-  margin-top: 20px;
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 180px;
+  height: 280px;
 }
 
 /* Add point input field END */
