--- a/gibprosj/src/static/css/App.css
+++ b/gibprosj/src/static/css/App.css
@@ -2,7 +2,8 @@
   top: 0;
   left: 0;
   margin: 0;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 /* APP */
@@ -11,7 +12,7 @@
   display: flex;
 }
 
-/* HEADER */
+/* HEADER ++ */
 
 #header {
   width: 80%;
@@ -20,7 +21,24 @@
   margin-bottom: 10px;
   margin-left: 10px;
   margin-right: 10px;
-  border-bottom: 2px solid black;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+#logo {
+  width: 220px;
+}
+
+#info-button {
+  background-color: white;
+  width: 21px;
+  height: 50px;
+}
+
+#tooltip-container {
+  width: 130px;
 }
 
 /* HEADER END */
@@ -197,9 +215,7 @@
 .vertical-line {
   border-right: 2px solid rgb(221, 221, 221);
   height: 100%;
-
 }
-
 
 /* INPUT END */
 
